# ai_tutorials

simple_chatbot/: pyproject.toml
simple_chatbot/src/: 01_chat.py
